--- a/shoppingcart/src/main/resources/application.properties
+++ b/shoppingcart/src/main/resources/application.properties
@@ -1,6 +1,16 @@
+# Which DB to run
+# local.run.db=H2
+local.run.db=POSTGRESQL
+#
+# For POSTGRESQL to run locally, you will need to set up an environment variable like the following
+# SPRING_DATASOURCE_URL='jdbc:postgresql://localhost:5432/dbname?password=password&sslmode=prefer&user=postgres'
+# The database name must already exist!
+# Yes those are _ instead of . and single quotes around the value of the environment variable
+#
 # Configurations useful for working with H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 #
 # We set a port that is not frequently used
 server.port=${PORT:2019}
@@ -19,6 +29,9 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 #
+# To turn off loading of SeedData. Default is true
+# command.line.runner.enabled=false
+#
 # Good for production!
 # spring.jpa.hibernate.ddl-auto=update
 # since we have our data in SeedData, do not also load it from data.sql
@@ -32,3 +45,6 @@ spring.jackson.time-zone=America/Los_Angeles
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+#
+OAUTHCLIENTID2=lambda-client-apps
+OAUTHCLIENTSECRET2=lambda-secret-apps
